veecle-os-runtime-macros/tests/ui/actor/init_context/specific_lifetime.stderr
error: lifetimes on actor arguments must be anonymous or static
 --> tests/ui/actor/init_context/specific_lifetime.rs:2:59
  |
2 | async fn macro_test_actor(#[init_context] _init_context: &'a u8) -> veecle_os_runtime::Never {
  |                                                           ^^
